ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • 2.4.5, 2.5.1
    • Affects Version/s: 2.4.3
    • Component/s: Querying
    • Environment:
      Linux Debian Wheezy
    • Fully Compatible
    • ALL
    • Hide

      Create a document with a large number of key/value pairs:

      { _id: <object>, r1: <value>, r2: <value>, r3: <value>, ... rN: <value> }

      Query the document with provided fields:
      db.collection.find(

      { _id: <object> }

      ,

      { r1: 1, r2: 1, r3: 1, ... rN: 1 }

      )

      Show
      Create a document with a large number of key/value pairs: { _id: <object>, r1: <value>, r2: <value>, r3: <value>, ... rN: <value> } Query the document with provided fields: db.collection.find( { _id: <object> } , { r1: 1, r2: 1, r3: 1, ... rN: 1 } )
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      An assertion is being issues by the server when providing a field list with a large number of fields. Reducing the number of fields returned does not cause the assertion.

      I first noticed this issue when querying via the PHP driver but running an identical query in the shell produces the same result:

      error:

      { "$err" : "assertion src/mongo/util/unordered_fast_key_table_internal.h:94" }

      Querying with 150 fields defined triggers the assertion. Query values of less (say, 100) do not. For my document it asserts at exactly 101 field values defined.

            Assignee:
            Tad Marshall
            Reporter:
            Justin
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: